<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collection_creation_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_enter_collection_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_collection_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="50dp"
            android:paddingTop="20dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/collection_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/coin_selector"
                android:layout_alignBottom="@id/coin_selector"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/collection_type" />

            <Spinner
                android:id="@+id/coin_selector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/collection_type_text"
                android:minHeight="50dp"
                android:prompt="@string/select_coin_type" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/check_show_mint_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/show_mint_mark" />

        <CheckBox
            android:id="@+id/check_edit_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/edit_date_range" />
        <!-- Populated programmatically with any coin-specific options -->
        <LinearLayout
            android:id="@+id/customizable_checkbox_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox3" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox5" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox6" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox7" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox8" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox9" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowCheckbox10" />

        </LinearLayout>
        <!-- The things below here can either appear or disappear based on
             the above options... Putting them at the end seems to be the
             most user-friendly. -->
        <!-- Populated programmatically with any coin-specific mint mark options -->
        <LinearLayout
            android:id="@+id/show_mint_mark_checkbox_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark3" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark5" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark6" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark7" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark8" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark9" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:tag="ShowMintMark10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_year_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_start_year"
                android:text="@string/enter_start_year" />

            <EditText
                android:id="@+id/edit_start_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_start_year"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="50dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stop_year_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_stop_year"
                android:text="@string/enter_stop_year" />

            <EditText
                android:id="@+id/edit_stop_year"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_stop_year"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/create_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/create_page" />
    </LinearLayout>
</ScrollView>
