<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="MergeRootFrame">

    <ListView
        android:id="@+id/main_activity_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
</FrameLayout>